integrate loaddb lexer & grammar into server
Signed-off-by: Valeri Nistor <nistor.valeri@gmail.com>

--- a/unit_tests/CMakeLists.txt
+++ b/unit_tests/CMakeLists.txt
@@ -31,17 +31,15 @@ option (UNIT_TEST_MEMORY_ALLOC  "Unit testing: memory allocation")
 option (UNIT_TEST_STRING_BUFFER "Unit testing: string buffer with format")
 option (UNIT_TEST_LOCKFREE "Unit testing: lockfree module")
 option (UNIT_TEST_THREAD "Unit testing: thread module")
-option (UNIT_TEST_REPLICATION "Unit testing: replication")
 option (UNIT_TEST_PACKING "Unit testing: packing")
 option (UNIT_TEST_STREAM "Unit testing: stream")
-moption (UNIT_TEST_COMM_CHN "Unit testing: communication channel module")
+option (UNIT_TEST_COMM_CHN "Unit testing: communication channel module")
 option (UNIT_TEST_TRANS_CHN "Unit testing: transfer channel module")
 option (UNIT_TEST_DDL_CL "Unit testing: ddl proxy client module")
 option (UNIT_TEST_REPLICATION "Unit testing: replication channels module")
 option (UNIT_TEST_RESOURCE_TRACKER "Unit testing: resource tracker")
 option (UNIT_TEST_MONITOR "Unit testing: monitor")
 option (UNIT_TEST_LOADDB "Unit testing: loaddb module")
-
 
 message("  unit_tests/...")
 
@@ -115,15 +113,7 @@ if (UNIT_TESTS OR UNIT_TEST_MONITOR)
   add_subdirectory(monitor)
 endif(UNIT_TESTS OR UNIT_TEST_MONITOR)
 
-if (UNIT_TESTS OR UNIT_TEST_REPLICATION)
-  message("    replication")
-  add_subdirectory(replication)
-endif(UNIT_TESTS OR UNIT_TEST_REPLICATION)
-
-#[[
-TODO CBRD-21654 disable until loader lexer & grammar will be moved completely to server
 if (UNIT_TESTS OR UNIT_TEST_LOADDB)
   message("    loaddb")
   add_subdirectory(loaddb)
 endif(UNIT_TESTS OR UNIT_TEST_LOADDB)
-]]
