--- a/cubrid/CMakeLists.txt
+++ b/cubrid/CMakeLists.txt
@@ -298,6 +298,7 @@ set(LOADER_SOURCES
   ${BISON_loader_grammar_OUTPUT_SOURCE}
   ${FLEX_loader_lexer_OUTPUTS}
   ${LOADDB_DIR}/driver.cpp
+  ${LOADDB_DIR}/loader_sr.cpp
   )
 
 list(APPEND CONNECTION_SOURCES ${CONNECTION_DIR}/heartbeat.c)
