--- a/cubrid/CMakeLists.txt
+++ b/cubrid/CMakeLists.txt
@@ -297,7 +297,9 @@ set(SESSION_SOURCES
 set(LOADER_SOURCES
   ${BISON_loader_grammar_OUTPUT_SOURCE}
   ${FLEX_loader_lexer_OUTPUTS}
+  ${LOADDB_DIR}/common.cpp
   ${LOADDB_DIR}/driver.cpp
+  ${LOADDB_DIR}/manager.cpp
   ${LOADDB_DIR}/loader_sr.cpp
   )
 
