--- a/cs/CMakeLists.txt
+++ b/cs/CMakeLists.txt
@@ -242,9 +242,9 @@ set(STORAGE_SOURCES
   ${STORAGE_DIR}/es_posix.c
   )
 
-set(LOADER_SOURCES
-  ${LOADDB_DIR}/common.cpp
-  ${LOADDB_DIR}/loaddb.c
+set(LOADDB_SOURCES
+  ${LOADDB_DIR}/load_common.cpp
+  ${LOADDB_DIR}/load_db.c
   ${LOADDB_DIR}/load_object.c
   )
 
@@ -321,7 +321,7 @@ SET_SOURCE_FILES_PROPERTIES(
   ${STORAGE_SOURCES}
   ${ES_SOURCES}
   ${PROBES_OBJECT}
-  ${LOADER_SOURCES}
+  ${LOADDB_SOURCES}
   PROPERTIES LANGUAGE CXX
   )
 SET_SOURCE_FILES_PROPERTIES(
@@ -353,7 +353,7 @@ add_library(cubridcs SHARED
   ${STORAGE_SOURCES}
   ${ES_SOURCES}
   ${PROBES_OBJECT}
-  ${LOADER_SOURCES}
+  ${LOADDB_SOURCES}
   )
 set_target_properties(cubridcs PROPERTIES SOVERSION "${CUBRID_MAJOR_VERSION}.${CUBRID_MINOR_VERSION}")
 
