Unit tests for SBR apply using ddl_proxy

--- a/unit_tests/CMakeLists.txt
+++ b/unit_tests/CMakeLists.txt
@@ -37,6 +37,7 @@ option (UNIT_TEST_DDL_CL "Unit testing: ddl proxy client module")
 option (UNIT_TEST_REPLICATION "Unit testing: replication channels module")
 option (UNIT_TEST_RESOURCE_TRACKER "Unit testing: resource tracker")
 option (UNIT_TEST_MONITOR "Unit testing: monitor")
+option (UNIT_TEST_MONITOR "Unit testing: replication")
 
 message("  unit_tests/...")
 
@@ -109,3 +110,9 @@ if (UNIT_TESTS OR UNIT_TEST_MONITOR)
   message("    monitor")
   add_subdirectory(monitor)
 endif(UNIT_TESTS OR UNIT_TEST_MONITOR)
+
+if (UNIT_TESTS OR UNIT_TEST_REPLICATION)
+  message("    replication")
+  add_subdirectory(replication)
+endif(UNIT_TESTS OR UNIT_TEST_REPLICATION)
+
