--- a/cubrid/CMakeLists.txt
+++ b/cubrid/CMakeLists.txt
@@ -314,7 +314,7 @@ set(LOADDB_SOURCES
   ${LOADDB_DIR}/load_common.cpp
   ${LOADDB_DIR}/load_db_value_converter.cpp
   ${LOADDB_DIR}/load_driver.cpp
-  ${LOADDB_DIR}/load_manager.cpp
+  ${LOADDB_DIR}/load_session.cpp
   ${LOADDB_DIR}/load_server_loader.cpp
   )
 
