--- a/sa/CMakeLists.txt
+++ b/sa/CMakeLists.txt
@@ -353,6 +353,7 @@ set(LOADDB_SOURCES
   ${LOADDB_DIR}/load_db.c
   ${LOADDB_DIR}/load_db_value_converter.cpp
   ${LOADDB_DIR}/load_driver.cpp
+  ${LOADDB_DIR}/load_error_manager.cpp
   ${LOADDB_DIR}/load_object.c
   ${LOADDB_DIR}/load_object_table.c
   )
