--- a/sa/CMakeLists.txt
+++ b/sa/CMakeLists.txt
@@ -152,26 +152,30 @@ set(COMMUNICATION_SOURCES
 set(PARSER_SOURCES
   ${BISON_csql_grammar_OUTPUTS}
   ${FLEX_csql_lexer_OUTPUTS}
-  ${PARSER_DIR}/parser_support.c
-  ${PARSER_DIR}/show_meta.c
-  ${PARSER_DIR}/double_byte_support.c
-  ${PARSER_DIR}/method_transform.c
   ${PARSER_DIR}/cnf.c
   ${PARSER_DIR}/compile.c
+  ${PARSER_DIR}/double_byte_support.c
+  ${PARSER_DIR}/func_type.cpp
+  ${PARSER_DIR}/keyword.c
+  ${PARSER_DIR}/method_transform.c
+  ${PARSER_DIR}/name_resolution.c
   ${PARSER_DIR}/parse_dbi.c
   ${PARSER_DIR}/parse_evaluate.c
-  ${PARSER_DIR}/keyword.c
-  ${PARSER_DIR}/parse_tree_cl.c
   ${PARSER_DIR}/parse_tree.c
-  ${PARSER_DIR}/query_result.c
-  ${PARSER_DIR}/name_resolution.c
-  ${PARSER_DIR}/semantic_check.c
-  ${PARSER_DIR}/type_checking.c
-  ${PARSER_DIR}/xasl_generation.c
-  ${PARSER_DIR}/scanner_support.c
-  ${PARSER_DIR}/view_transform.c
-  ${PARSER_DIR}/func_type.cpp
+  ${PARSER_DIR}/parse_tree_cl.c
   ${PARSER_DIR}/parse_type.cpp
+  ${PARSER_DIR}/parser_support.c
+  ${PARSER_DIR}/query_result.c
+  ${PARSER_DIR}/scanner_support.c
+  ${PARSER_DIR}/semantic_check.c
+  ${PARSER_DIR}/show_meta.c
+  ${PARSER_DIR}/type_checking.c
+  ${PARSER_DIR}/view_transform.c
+  ${PARSER_DIR}/xasl_generation.c
+  )
+set(PARSER_HEADERS
+  ${PARSER_DIR}/func_type.hpp
+  ${PARSER_DIR}/parse_type.hpp
   )
 
 set(OPTIMIZER_SOURCES
@@ -453,6 +457,7 @@ add_library(cubridsa SHARED
   ${CONNECTION_TCP_SOURCE}
   ${COMMUNICATION_SOURCES}
   ${PARSER_SOURCES}
+  ${PARSER_HEADERS}
   ${OPTIMIZER_SOURCES}
   ${QUERY_HEADERS}
   ${QUERY_SOURCES}
