--- a/cubrid/CMakeLists.txt
+++ b/cubrid/CMakeLists.txt
@@ -314,6 +314,8 @@ set(LOADDB_SOURCES
   ${LOADDB_DIR}/load_common.cpp
   ${LOADDB_DIR}/load_db_value_converter.cpp
   ${LOADDB_DIR}/load_driver.cpp
+  ${LOADDB_DIR}/load_error_handler.cpp
+  ${LOADDB_DIR}/load_semantic_helper.cpp
   ${LOADDB_DIR}/load_server_loader.cpp
   ${LOADDB_DIR}/load_session.cpp
   )
