memory blocks extensions

--- a/cs/CMakeLists.txt
+++ b/cs/CMakeLists.txt
@@ -92,8 +92,10 @@ set(BASE_SOURCES
   ${BASE_DIR}/locale_support.c
   ${BASE_DIR}/lock_free.c
   ${BASE_DIR}/md5.c
+  ${BASE_DIR}/mem_block.cpp
   ${BASE_DIR}/memory_alloc.c
   ${BASE_DIR}/memory_hash.c
+  ${BASE_DIR}/memory_private_allocator.cpp
   ${BASE_DIR}/message_catalog.c
   ${BASE_DIR}/misc_string.c
   ${BASE_DIR}/mprec.c
@@ -123,7 +125,9 @@ set(BASE_HEADERS
   ${BASE_DIR}/error_code.h
   ${BASE_DIR}/error_context.hpp
   ${BASE_DIR}/error_manager.h
+  ${BASE_DIR}/extensible_array.hpp
   ${BASE_DIR}/mem_block.hpp
+  ${BASE_DIR}/memory_private_allocator.hpp
   ${BASE_DIR}/fileline_location.hpp
   ${BASE_DIR}/packer.hpp
   ${BASE_DIR}/perf.hpp
@@ -169,6 +173,7 @@ set(PARSER_SOURCES
   ${PARSER_DIR}/parse_tree.c
   ${PARSER_DIR}/parse_tree_cl.c
   ${PARSER_DIR}/parse_type.cpp
+  ${PARSER_DIR}/parser_allocator.cpp
   ${PARSER_DIR}/parser_support.c
   ${PARSER_DIR}/query_result.c
   ${PARSER_DIR}/scanner_support.c
@@ -182,6 +187,7 @@ set(PARSER_SOURCES
 set(PARSER_HEADERS
   ${PARSER_DIR}/func_type.hpp
   ${PARSER_DIR}/parse_type.hpp
+  ${PARSER_DIR}/parser_allocator.hpp
   )
 
 set(OPTIMIZER_SOURCES
