fix task count and missing keys

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -208,7 +208,8 @@ else(VERSION_MATCHES_LENGTH GREATER 3)
         WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})
     endif(GIT_VERSION VERSION_GREATER 1.7.6)
     if(git_result)
-      message(FATAL_ERROR "Could not get count information from Git")
+      #message(FATAL_ERROR "Could not get count information from Git")
+	  set(commit_count 1)
     endif(git_result)
     set(CUBRID_EXTRA_VERSION ${commit_count})
     execute_process(COMMAND ${GIT_EXECUTABLE} rev-parse --short HEAD
