--- a/cs/CMakeLists.txt
+++ b/cs/CMakeLists.txt
@@ -47,6 +47,7 @@ set(COMPAT_SOURCES
   ${COMPAT_DIR}/db_info.c
   ${COMPAT_DIR}/db_json.cpp
   ${COMPAT_DIR}/db_json_path.cpp
+  ${COMPAT_DIR}/db_json_private_allocator.cpp
   ${COMPAT_DIR}/db_json_types_internal.cpp
   ${COMPAT_DIR}/db_macro.c
   ${COMPAT_DIR}/db_obj.c
@@ -68,6 +69,7 @@ set (COMPAT_HEADERS
   ${COMPAT_DIR}/dbtype_def.h
   ${COMPAT_DIR}/db_json.hpp
   ${COMPAT_DIR}/db_json_path.hpp
+  ${COMPAT_DIR}/db_json_private_allocator.hpp
   ${COMPAT_DIR}/db_json_types_internal.hpp
   ${COMPAT_DIR}/dbtype_function.h
   ${COMPAT_DIR}/dbtype_function.i
